Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanObjectField.quorum
class Main
    boolean v = Test()
    action Main
    end

    action Test() returns boolean
        Object var
        return var
    end
end